--- a/data.ipynb
+++ b/data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Reading the Climate variables\n",
     "\n",
-    "In the following we load the climate variables computed at `./wetter/climate_vars.ipynb`. We index all the rows based on their `nuts` location and the timestamp of the datapoint. This will allow us to merge it with the SWB data later on.\n",
+    "In the following we load the climate variables computed at `./weather/climate_vars.ipynb`. We index all the rows based on their `nuts` location and the timestamp of the datapoint. This will allow us to merge it with the SWB data later on.\n",
     "\n",
     "To know from which climate table we want to merge the data, the nuts information has to be provided"
    ]
@@ -124,15 +124,15 @@
     "    \"syear\":\"year\", # survey year -> prim. key\n",
     "    \"hid\":\"hid\", # hh id -> prim. key\n",
     "    # hh control variables:\n",
-    "    \"hlc0005_h\":\"hh_einkommen\", #[de] Monatliches HH-Netto-Einkommen [harmonisiert]\n",
+    "    \"hlc0005_h\":\"hh_income\", #[de] Monatliches HH-Netto-Einkommen [harmonisiert]\n",
     "    \"hlc0043\":\"hh_children\" # Number Children\n",
     "}\n",
     "\n",
     "hbrutto_var = {\n",
     "    \"syear\":\"year\", # survey year -> prim. key\n",
     "    \"hid\":\"hid\", # hh id -> prim. key\n",
-    "    \"bula_h\":\"sloc\" # location -> bundesland/kreis/etc\n",
-    "    #_:\"sloc\" ...\n",
+    "    \"bula_h\":\"sloc\" # location -> bundesland\n",
+    "    #_:\"sloc\" ... -> kreis?\n",
     "}"
    ]
   },
@@ -243,7 +243,7 @@
     "    \"pid\":\"pid\", # person id -> prim. key\n",
     "    \"syear\":\"year\", #survey year -> prim. key\n",
     "    # relevant covariates\n",
-    "    \"sex\":\"gender\", # Current life satisfaction [0-10] TARGET VARIABLE\n",
+    "    \"sex\":\"sex\", # Current life satisfaction [0-10] TARGET VARIABLE\n",
     "    \"gebjahr\":\"birth_year\", # year of birth\n",
     "    \"partner\":\"relationship\", # [0] no partner, [1] spouse, [2] partner, [3] Probably spouse\n",
     "}\n",
@@ -260,7 +260,7 @@
     "    # relevant covariates\n",
     "    \"plh0171\":\"health\", # Current Health [1-5] (0=schlecht, 10=gut)\n",
     "    \"plb0021\":\"unemployed\", # [2] No [1] Yes\n",
-    "    \"plh0173\":\"work\", # [0-10] not satisfied <-> very satisfied, NOTE: many nan - family?\n",
+    "    \"plh0173\":\"work\", # [0-10] not satisfied <-> very satisfied, NOTE: many nan\n",
     "    \"plh0174\":\"work_hh\", # same as above (NOTE: maybe take max of both?)\n",
     "    \"plg0030\":\"education\", # Total Education, Training Item Nonresponse, NOTE: many nan\n",
     "    \"plh0175\":\"income_satisfaction\" # Satisfaction With Household Income\n",
@@ -291,7 +291,7 @@
    "id": "89724dbe-5054-4135-a849-d757419879b9",
    "metadata": {},
    "source": [
-    "The `pl` file is the largest in the database. Most machines will not support loading this file into memory. Fortunatiely, a left join needs to be performed on this file such that it is possible to do the merger chunkwise."
+    "The `pl` file is the largest in the database. Most machines will not support loading this file into memory. Fortunatiely, a left join needs to be performed on this file such that it is possible to do the merging chunkwise."
    ]
   },
   {
