--- a/data.ipynb
+++ b/data.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_path = \"wetter/prod/climate.db\"\n",
+    "c_path = \"weather/prod/climate.db\"\n",
     "c_engine = create_engine(\"sqlite:///\"+c_path, echo=False)"
    ]
   },
@@ -93,8 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hbrutto_path = \"./soep/SOEP-CORE.v37eu_CSV/CSV/hbrutto.csv\"\n",
-    "hl_path = \"./soep/SOEP-CORE.v37eu_CSV/CSV/hl.csv\""
+    "hbrutto_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/hbrutto.csv\"\n",
+    "hl_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/hl.csv\""
    ]
   },
   {
@@ -228,8 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ppathl_path = \"./soep/SOEP-CORE.v37eu_CSV/CSV/ppathl.csv\"\n",
-    "pl_path = \"./soep/SOEP-CORE.v37eu_CSV/CSV/pl.csv\""
+    "ppathl_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/ppathl.csv\"\n",
+    "pl_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/pl.csv\""
    ]
   },
   {
@@ -299,36 +299,47 @@
    "execution_count": 14,
    "id": "f61636b6-625a-401e-9cf7-dd64f79f43d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "722380"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "chunksize = 1000\n",
     "nuts_lvl = 1\n",
     "df_climate = load_climate_data(c_engine, nuts_lvl=nuts_lvl) \n",
-    "for chunk in pd.read_csv(pl_path, chunksize=chunksize, usecols=pl_var.keys()):\n",
-    "    # rename vars\n",
-    "    chunk.rename(pl_var, axis=1, inplace=True)\n",
-    "    \n",
-    "    ## MERGE WITH OTHER DATASETS\n",
-    "    # merge with tracking data\n",
-    "    chunk = chunk.merge(df_ppathl, on=[\"year\", \"pid\"], how=\"inner\")\n",
-    "    # merge with household\n",
-    "    chunk = chunk.merge(df_hh, on=[\"year\", \"hid\"], how=\"inner\")\n",
-    "    \n",
-    "    ## CALCULATE RELEVANT VARIABLES\n",
-    "    # age:\n",
-    "    chunk[\"age\"] = chunk[\"year\"] - chunk[\"birth_year\"]\n",
-    "    # time stamp:\n",
-    "    chunk[\"time\"] = pd.to_datetime(chunk[['year', 'month', 'day']], errors='coerce')\n",
-    "    # drop unuseful columns:\n",
-    "    chunk.drop(['year', 'month', 'day'], axis=1, inplace=True)\n",
-    "    # delete invalid time stamps as they cannot be merged with climate data:\n",
-    "    chunk = chunk[chunk['time'].notna()]\n",
-    "    \n",
-    "    ## MERGE WITH CLIMATE DF\n",
-    "    final = pd.merge(chunk, df_climate, on=[\"time\", 'sloc'], how='inner')\n",
-    "    \n",
-    "    ## SAVE TO DATABASE\n",
-    "    final.to_sql(f\"{nuts_lvl}_data\", con = engine, if_exists='append')"
+    "\n",
+    "chunk = pd.read_csv(pl_path, usecols=pl_var.keys())\n",
+    "# rename vars\n",
+    "chunk.rename(pl_var, axis=1, inplace=True)\n",
+    "\n",
+    "## MERGE WITH OTHER DATASETS\n",
+    "# merge with tracking data\n",
+    "chunk = chunk.merge(df_ppathl, on=[\"year\", \"pid\"], how=\"inner\")\n",
+    "# merge with household\n",
+    "chunk = chunk.merge(df_hh, on=[\"year\", \"hid\"], how=\"inner\")\n",
+    "\n",
+    "## CALCULATE RELEVANT VARIABLES\n",
+    "# age:\n",
+    "chunk[\"age\"] = chunk[\"year\"] - chunk[\"birth_year\"]\n",
+    "# time stamp:\n",
+    "chunk[\"time\"] = pd.to_datetime(chunk[['year', 'month', 'day']], errors='coerce')\n",
+    "# drop unuseful columns:\n",
+    "chunk.drop(['year', 'month', 'day'], axis=1, inplace=True)\n",
+    "# delete invalid time stamps as they cannot be merged with climate data:\n",
+    "chunk = chunk[chunk['time'].notna()]\n",
+    "\n",
+    "## MERGE WITH CLIMATE DF\n",
+    "final = pd.merge(chunk, df_climate, on=[\"time\", 'sloc'], how='inner')\n",
+    "\n",
+    "## SAVE TO DATABASE\n",
+    "final.to_sql(f\"{nuts_lvl}_data\", con = engine, if_exists='append')"
    ]
   }
  ],
