--- a/weather/weather_data.ipynb
+++ b/weather/weather_data.ipynb
@@ -17,7 +17,7 @@
     "import geopandas as gpd\n",
     "from meteostat import Stations, Daily, Point\n",
     "import numpy as np\n",
-    "from src.helper import get_nuts_data, plot_centroids_with_radius\n",
+    "from src.helper import get_nuts_data\n",
     "from src.helper import get_daily_weather_data, get_daily_weather_data_loc\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
@@ -273,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.0 ('thesis')",
    "language": "python",
    "name": "python3"
   },
@@ -288,6 +288,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "10416539d8bd7745bfd84da934453afb2f17a286a80737bde1b4f151ea1b0bb8"
+   }
   }
  },
  "nbformat": 4,
