--- a/weather/station_data.ipynb
+++ b/weather/station_data.ipynb
@@ -41,6 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup cache\n",
+    "Stations.cache_dir = \"./prod/.meteostat/cache\"\n",
+    "\n",
     "query = Stations()\n",
     "query.region(\"DE\")\n",
     "stations = query.fetch()\n",
@@ -152,112 +155,31 @@
        "      <td>DE1</td>\n",
        "      <td>Baden-Württemberg</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>DEG0K</td>\n",
-       "      <td>Saale-Orla-Kreis</td>\n",
-       "      <td>POLYGON ((11.76214 50.78168, 11.78182 50.78502...</td>\n",
-       "      <td>DEG0</td>\n",
-       "      <td>Thüringen</td>\n",
-       "      <td>DEG</td>\n",
-       "      <td>Thüringen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397</th>\n",
-       "      <td>DEG0L</td>\n",
-       "      <td>Greiz</td>\n",
-       "      <td>POLYGON ((12.13437 50.82008, 12.13695 50.83808...</td>\n",
-       "      <td>DEG0</td>\n",
-       "      <td>Thüringen</td>\n",
-       "      <td>DEG</td>\n",
-       "      <td>Thüringen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
-       "      <td>DEG0M</td>\n",
-       "      <td>Altenburger Land</td>\n",
-       "      <td>POLYGON ((12.41008 51.07293, 12.42078 51.07806...</td>\n",
-       "      <td>DEG0</td>\n",
-       "      <td>Thüringen</td>\n",
-       "      <td>DEG</td>\n",
-       "      <td>Thüringen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>399</th>\n",
-       "      <td>DEG0N</td>\n",
-       "      <td>Eisenach, Kreisfreie Stadt</td>\n",
-       "      <td>POLYGON ((10.32084 51.05173, 10.33212 51.04894...</td>\n",
-       "      <td>DEG0</td>\n",
-       "      <td>Thüringen</td>\n",
-       "      <td>DEG</td>\n",
-       "      <td>Thüringen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>DEG0P</td>\n",
-       "      <td>Wartburgkreis</td>\n",
-       "      <td>POLYGON ((10.32190 50.93102, 10.33718 50.95520...</td>\n",
-       "      <td>DEG0</td>\n",
-       "      <td>Thüringen</td>\n",
-       "      <td>DEG</td>\n",
-       "      <td>Thüringen</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>401 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    NUTS_CODE_3                 NUTS_NAME_3  \\\n",
-       "0         DE111       Stuttgart, Stadtkreis   \n",
-       "1         DE112                   Böblingen   \n",
-       "2         DE113                   Esslingen   \n",
-       "3         DE114                   Göppingen   \n",
-       "4         DE115                 Ludwigsburg   \n",
-       "..          ...                         ...   \n",
-       "396       DEG0K            Saale-Orla-Kreis   \n",
-       "397       DEG0L                       Greiz   \n",
-       "398       DEG0M            Altenburger Land   \n",
-       "399       DEG0N  Eisenach, Kreisfreie Stadt   \n",
-       "400       DEG0P               Wartburgkreis   \n",
+       "  NUTS_CODE_3            NUTS_NAME_3  \\\n",
+       "0       DE111  Stuttgart, Stadtkreis   \n",
+       "1       DE112              Böblingen   \n",
+       "2       DE113              Esslingen   \n",
+       "3       DE114              Göppingen   \n",
+       "4       DE115            Ludwigsburg   \n",
        "\n",
-       "                                              geometry NUTS_CODE_2  \\\n",
-       "0    POLYGON ((9.13453 48.85667, 9.14123 48.86183, ...        DE11   \n",
-       "1    POLYGON ((8.96647 48.82979, 8.99217 48.83356, ...        DE11   \n",
-       "2    POLYGON ((9.40974 48.53721, 9.39154 48.53014, ...        DE11   \n",
-       "3    POLYGON ((9.91934 48.63977, 9.94731 48.63369, ...        DE11   \n",
-       "4    MULTIPOLYGON (((9.30157 48.95210, 9.31516 48.9...        DE11   \n",
-       "..                                                 ...         ...   \n",
-       "396  POLYGON ((11.76214 50.78168, 11.78182 50.78502...        DEG0   \n",
-       "397  POLYGON ((12.13437 50.82008, 12.13695 50.83808...        DEG0   \n",
-       "398  POLYGON ((12.41008 51.07293, 12.42078 51.07806...        DEG0   \n",
-       "399  POLYGON ((10.32084 51.05173, 10.33212 51.04894...        DEG0   \n",
-       "400  POLYGON ((10.32190 50.93102, 10.33718 50.95520...        DEG0   \n",
+       "                                            geometry NUTS_CODE_2 NUTS_NAME_2  \\\n",
+       "0  POLYGON ((9.13453 48.85667, 9.14123 48.86183, ...        DE11   Stuttgart   \n",
+       "1  POLYGON ((8.96647 48.82979, 8.99217 48.83356, ...        DE11   Stuttgart   \n",
+       "2  POLYGON ((9.40974 48.53721, 9.39154 48.53014, ...        DE11   Stuttgart   \n",
+       "3  POLYGON ((9.91934 48.63977, 9.94731 48.63369, ...        DE11   Stuttgart   \n",
+       "4  MULTIPOLYGON (((9.30157 48.95210, 9.31516 48.9...        DE11   Stuttgart   \n",
        "\n",
-       "    NUTS_NAME_2 NUTS_CODE_1        NUTS_NAME_1  \n",
-       "0     Stuttgart         DE1  Baden-Württemberg  \n",
-       "1     Stuttgart         DE1  Baden-Württemberg  \n",
-       "2     Stuttgart         DE1  Baden-Württemberg  \n",
-       "3     Stuttgart         DE1  Baden-Württemberg  \n",
-       "4     Stuttgart         DE1  Baden-Württemberg  \n",
-       "..          ...         ...                ...  \n",
-       "396   Thüringen         DEG          Thüringen  \n",
-       "397   Thüringen         DEG          Thüringen  \n",
-       "398   Thüringen         DEG          Thüringen  \n",
-       "399   Thüringen         DEG          Thüringen  \n",
-       "400   Thüringen         DEG          Thüringen  \n",
-       "\n",
-       "[401 rows x 7 columns]"
+       "  NUTS_CODE_1        NUTS_NAME_1  \n",
+       "0         DE1  Baden-Württemberg  \n",
+       "1         DE1  Baden-Württemberg  \n",
+       "2         DE1  Baden-Württemberg  \n",
+       "3         DE1  Baden-Württemberg  \n",
+       "4         DE1  Baden-Württemberg  "
       ]
      },
      "execution_count": 12,
@@ -278,7 +200,8 @@
     "               .sjoin(shape[0], how=\"left\", rsuffix='1', predicate=\"within\")\n",
     "nuts.rename({\"NUTS_CODE\":\"NUTS_CODE_1\",\t\"NUTS_NAME\":\"NUTS_NAME_1\"}, inplace=True, axis=1)\n",
     "nuts.drop(\"NUTS_LEVEL_2 NUTS_LEVEL_3 NUTS_LEVEL index_2 index_1\".split(), inplace=True, axis=1)\n",
-    "nuts.sort_index()"
+    "nuts.sort_index(inplace=True)\n",
+    "nuts.head()"
    ]
   },
   {
@@ -287,6 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create GeoDataFrame from stations\n",
     "x, y = stations[\"longitude\"], stations[\"latitude\"]\n",
     "stations[\"geometry\"] = gp.GeoSeries(map(Point, zip(x, y)))\n",
     "stations.drop([\"longitude\", \"latitude\"], axis=1, inplace=True)\n",
@@ -348,20 +272,6 @@
        "      <td>Schleswig-Holstein</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1264</th>\n",
-       "      <td>10146</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1974-12-01</td>\n",
-       "      <td>2022-11-26</td>\n",
-       "      <td>POINT (9.88330 53.73330)</td>\n",
-       "      <td>DEF09</td>\n",
-       "      <td>Pinneberg</td>\n",
-       "      <td>DEF0</td>\n",
-       "      <td>Schleswig-Holstein</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>Schleswig-Holstein</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1231</th>\n",
        "      <td>10018</td>\n",
        "      <td>16.0</td>\n",
@@ -403,6 +313,20 @@
        "      <td>DEF</td>\n",
        "      <td>Schleswig-Holstein</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>10026</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1891-01-01</td>\n",
+       "      <td>1974-06-30</td>\n",
+       "      <td>POINT (9.15000 54.51670)</td>\n",
+       "      <td>DEF07</td>\n",
+       "      <td>Nordfriesland</td>\n",
+       "      <td>DEF0</td>\n",
+       "      <td>Schleswig-Holstein</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>Schleswig-Holstein</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -410,24 +334,24 @@
       "text/plain": [
        "     station_id  elevation daily_start  daily_end                  geometry  \\\n",
        "1230      10015        4.0  1952-05-01 2022-11-26  POINT (7.90000 54.18330)   \n",
-       "1264      10146       13.0  1974-12-01 2022-11-26  POINT (9.88330 53.73330)   \n",
        "1231      10018       16.0  2009-02-24 2022-04-25  POINT (8.35000 54.91670)   \n",
        "1232      10020       26.0  1931-01-01 2022-11-26  POINT (8.41670 55.01670)   \n",
        "1233      10022        7.0  1973-01-01 2022-11-26  POINT (8.95000 54.80000)   \n",
+       "1234      10026       28.0  1891-01-01 1974-06-30  POINT (9.15000 54.51670)   \n",
        "\n",
        "     NUTS_CODE_3    NUTS_NAME_3 NUTS_CODE_2         NUTS_NAME_2 NUTS_CODE_1  \\\n",
        "1230       DEF09      Pinneberg        DEF0  Schleswig-Holstein         DEF   \n",
-       "1264       DEF09      Pinneberg        DEF0  Schleswig-Holstein         DEF   \n",
        "1231       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
        "1232       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
        "1233       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
+       "1234       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
        "\n",
        "             NUTS_NAME_1  \n",
        "1230  Schleswig-Holstein  \n",
-       "1264  Schleswig-Holstein  \n",
        "1231  Schleswig-Holstein  \n",
        "1232  Schleswig-Holstein  \n",
-       "1233  Schleswig-Holstein  "
+       "1233  Schleswig-Holstein  \n",
+       "1234  Schleswig-Holstein  "
       ]
      },
      "execution_count": 14,
@@ -440,6 +364,7 @@
     "stations:gp.GeoDataFrame\n",
     "stations = stations.sjoin(nuts, how=\"inner\", predicate=\"within\")\n",
     "stations.drop(\"index_right\", axis=1, inplace=True)\n",
+    "stations.sort_index(inplace=True)\n",
     "stations.head()"
    ]
   },
@@ -463,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1116/1116 [00:00<00:00, 14964.48it/s]\n"
+      "100%|██████████| 1116/1116 [00:00<00:00, 17296.23it/s]\n"
      ]
     }
    ],
