--- a/data.ipynb
+++ b/data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "0b6bedb9-e30c-4dc4-8a0d-e38202ca6bcd",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "cedf9342-1b08-4d15-9387-c9a0fae7183f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "3e6be6d5-f875-4a00-8456-9ecab9212638",
    "metadata": {},
    "outputs": [],
@@ -71,6 +71,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a1a0148a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nuts_lvl = 1\n",
+    "df_climate = load_climate_data(c_engine, nuts_lvl=nuts_lvl) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f91792cc-ef3e-4e6f-916b-5d1bde9c3f6c",
    "metadata": {},
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "ddb4e8df-9113-4f22-9911-072310b4aa98",
    "metadata": {},
    "outputs": [],
@@ -106,16 +117,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "206b7ee1-e64d-4319-badb-771b3df06412",
    "metadata": {},
    "source": [
-    "In the following are the columns of interest with in the `hl` and `hbrutto` file with the corresponding meaning. It is written in a dictionary format so we can rename the variables into something more understandable."
+    "In the following are the columns of interest with in the `hl` and `hbrutto` file with the corresponding meaning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "77010969-2ce6-4900-ad79-8ba7c4c56e68",
    "metadata": {},
    "outputs": [],
@@ -125,14 +137,15 @@
     "    \"hid\":\"hid\", # hh id -> prim. key\n",
     "    # hh control variables:\n",
     "    \"hlc0005_h\":\"hh_income\", #[de] Monatliches HH-Netto-Einkommen [harmonisiert]\n",
-    "    \"hlc0043\":\"hh_children\" # Number Children\n",
-    "}\n",
+    "    \"hlc0043\":\"hh_children\", # Number Children\n",
+    "    \"hlf0001_h\":\"homeownership\", # Homewonership\n",
+    "    \"hlk0056\":\"interview_type\", # Type of interview\n",
+    "} # \n",
     "\n",
     "hbrutto_var = {\n",
     "    \"syear\":\"year\", # survey year -> prim. key\n",
     "    \"hid\":\"hid\", # hh id -> prim. key\n",
     "    \"bula_h\":\"sloc\" # location -> bundesland\n",
-    "    #_:\"sloc\" ... -> kreis?\n",
     "}"
    ]
   },
@@ -146,24 +159,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "6c2ec0f3-5dba-481e-9ef9-405a47fd885b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hl = pd.read_csv(hl_path, usecols=hl_var.keys())\n",
-    "df_hl.rename(hl_var, axis=1, inplace=True)"
+    "df_hl = pd.read_csv(hl_path, usecols=hl_var.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "f351c1b0-7d6e-4609-93b7-86f60989d99f",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_hbrutto = pd.read_csv(hbrutto_path, usecols=hbrutto_var.keys())\n",
-    "df_hbrutto.rename(hbrutto_var, axis=1, inplace=True)"
+    "# change location variable to be able to merge with weather data\n",
+    "df_hbrutto.rename({\"bula_h\":\"sloc\"}, axis=1, inplace=True)"
    ]
   },
   {
@@ -176,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "e1fab759-5662-4502-955b-f05272a2cd3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hh = df_hl.merge(df_hbrutto, how=\"inner\", on=[\"hid\", \"year\"])"
+    "df_hh = df_hl.merge(df_hbrutto, how=\"inner\", on=[\"hid\", \"syear\"])"
    ]
   },
   {
@@ -194,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "829275d5-bffa-488b-862a-5e3b18825329",
    "metadata": {},
    "outputs": [],
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "c6112267-1e23-4a93-ab9e-0f7c077d9a82",
    "metadata": {},
    "outputs": [],
@@ -223,18 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "c5f2098d-36f8-4798-a465-fd6113dcb620",
    "metadata": {},
    "outputs": [],
    "source": [
     "ppathl_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/ppathl.csv\"\n",
+    "pequiv_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/pequiv.csv\"\n",
     "pl_path = \"./data/SOEP-CORE.v37eu_CSV/CSV/pl.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "52c2cd27-a42c-4bd6-9899-b569ee227b2e",
    "metadata": {},
    "outputs": [],
@@ -243,27 +257,36 @@
     "    \"pid\":\"pid\", # person id -> prim. key\n",
     "    \"syear\":\"year\", #survey year -> prim. key\n",
     "    # relevant covariates\n",
-    "    \"sex\":\"sex\", # Current life satisfaction [0-10] TARGET VARIABLE\n",
+    "    \"sex\":\"sex\", # gender [1] female [2] male\n",
     "    \"gebjahr\":\"birth_year\", # year of birth\n",
-    "    \"partner\":\"relationship\", # [0] no partner, [1] spouse, [2] partner, [3] Probably spouse\n",
+    "    \"partner\":\"relationship\", # [0] no partner, [1] spouse, [2] partner,\n",
+    "                              # [3] Probably spouse, [4] probably partner\n",
+    "                              # NOTE: join 1&3 and 2&4\n",
+    "}\n",
+    "\n",
+    "pequiv_var = {\n",
+    "    \"pid\":\"pid\", # person id -> prim. key\n",
+    "    \"syear\":\"year\", #survey year -> prim. key\n",
+    "    \"d11109\":\"education_years\", #years of education\n",
+    "    \"m11124\":\"disability_status\", #Disability status\n",
+    "    \"e11103\":\"\" #Labor Participation\n",
     "}\n",
     "\n",
     "pl_var = {\n",
     "    # ids\n",
     "    \"pid\":\"pid\", # person id -> prim. key\n",
-    "    \"hid\":\"hid\", # hh id -> forg. key\n",
     "    \"syear\":\"year\", #survey year -> prim. key\n",
+    "    \"hid\":\"hid\", # hh id -> prim. key\n",
+    "    # target variable\n",
+    "    \"plh0182\":\"swb\", # Current life dsatisfaction [0-10]\n",
+    "    # relevant covariates\n",
     "    \"ptagin\":\"day\", #day of interview\n",
     "    \"pmonin\":\"month\", #month of interview\n",
-    "    # target variable\n",
-    "    \"plh0182\":\"swb\", # Current life satisfaction [0-10]\n",
-    "    # relevant covariates\n",
-    "    \"plh0171\":\"health\", # Current Health [1-5] (0=schlecht, 10=gut)\n",
+    "    \"plh0171\":\"satisfaction_health\", # Current Health [1-5] (0=schlecht, 10=gut)\n",
     "    \"plb0021\":\"unemployed\", # [2] No [1] Yes\n",
-    "    \"plh0173\":\"work\", # [0-10] not satisfied <-> very satisfied, NOTE: many nan\n",
-    "    \"plh0174\":\"work_hh\", # same as above (NOTE: maybe take max of both?)\n",
-    "    \"plg0030\":\"education\", # Total Education, Training Item Nonresponse, NOTE: many nan\n",
-    "    \"plh0175\":\"income_satisfaction\" # Satisfaction With Household Income\n",
+    "    \"plh0173\":\"satisfaction_work\", # [0-10] not satisfied <-> very satisfied, NOTE: many nan\n",
+    "    \"plh0174\":\"satisfaction_work_hh\", # same as above (NOTE: maybe take max of both?)\n",
+    "    \"plh0175\":\"satisfaction_income\" # Satisfaction With Household Income\n",
     "}"
    ]
   },
@@ -277,26 +300,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "03cec35e-1be9-47ee-af5d-49d1a3e1a359",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var.keys())\n",
-    "df_ppathl.rename(ppathl_var, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89724dbe-5054-4135-a849-d757419879b9",
-   "metadata": {},
-   "source": [
-    "The `pl` file is the largest in the database. Most machines will not support loading this file into memory. Fortunatiely, a left join needs to be performed on this file such that it is possible to do the merging chunkwise."
+    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
+   "id": "271322be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pequiv = pd.read_csv(pequiv_path, usecols=pequiv_var.keys())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "89724dbe-5054-4135-a849-d757419879b9",
+   "metadata": {},
+   "source": [
+    "In the following we merge all the dataframes loaded into memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "f61636b6-625a-401e-9cf7-dd64f79f43d5",
    "metadata": {},
    "outputs": [
@@ -306,29 +339,27 @@
        "722380"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nuts_lvl = 1\n",
-    "df_climate = load_climate_data(c_engine, nuts_lvl=nuts_lvl) \n",
-    "\n",
     "chunk = pd.read_csv(pl_path, usecols=pl_var.keys())\n",
-    "# rename vars\n",
-    "chunk.rename(pl_var, axis=1, inplace=True)\n",
     "\n",
     "## MERGE WITH OTHER DATASETS\n",
     "# merge with tracking data\n",
-    "chunk = chunk.merge(df_ppathl, on=[\"year\", \"pid\"], how=\"inner\")\n",
+    "chunk = chunk.merge(df_ppathl, on=[\"syear\", \"pid\"], how=\"inner\")\n",
+    "# merge with pequiv (TODO what is this table)\n",
+    "chunk = chunk.merge(df_pequiv, on=[\"syear\", \"pid\"], how=\"inner\")\n",
     "# merge with household\n",
-    "chunk = chunk.merge(df_hh, on=[\"year\", \"hid\"], how=\"inner\")\n",
+    "chunk = chunk.merge(df_hh, on=[\"syear\", \"hid\"], how=\"inner\")\n",
     "\n",
     "## CALCULATE RELEVANT VARIABLES\n",
     "# age:\n",
-    "chunk[\"age\"] = chunk[\"year\"] - chunk[\"birth_year\"]\n",
+    "chunk[\"age\"] = chunk[\"syear\"] - chunk[\"gebjahr\"]\n",
     "# time stamp:\n",
+    "chunk.rename({'syear':\"year\", 'pmonin':\"month\", 'ptagin':\"day\"}, axis=1, inplace=True)\n",
     "chunk[\"time\"] = pd.to_datetime(chunk[['year', 'month', 'day']], errors='coerce')\n",
     "# drop unuseful columns:\n",
     "chunk.drop(['year', 'month', 'day'], axis=1, inplace=True)\n",
@@ -339,7 +370,8 @@
     "final = pd.merge(chunk, df_climate, on=[\"time\", 'sloc'], how='inner')\n",
     "\n",
     "## SAVE TO DATABASE\n",
-    "final.to_sql(f\"{nuts_lvl}_data\", con = engine, if_exists='append')"
+    "final.to_csv(\"./prod/1_data.csv\")\n",
+    "final.to_sql(f\"{nuts_lvl}_data\", con = engine, if_exists='replace')"
    ]
   }
  ],
