--- a/weather/areal_climate.ipynb
+++ b/weather/areal_climate.ipynb
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.0 ('thesis')",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "10416539d8bd7745bfd84da934453afb2f17a286a80737bde1b4f151ea1b0bb8"
+   }
   }
  },
  "nbformat": 4,
